# mach_test

./: .anjuta_sym_db.db  Makefile.in  README.md  aclocal.m4  configure  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  mach_test
Debug/src/.deps/: environment.Po  insect.Po  main.Po  track.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  cfg.h  cfg.h~  environment.cc  environment.h  environment.h~  insect.cc  insect.cc~  insect.h  insect.h~  main.cc~  to-do  to-do~  track.cc  track.cc~  track.h  track.h~
